parser/tests/bad/stmt05.st
% type of the 'result' expression cannot be assigned as the result type of the 'function'

function f(): int
  result "string"
end f
